--- a/scss/index/_index-media.scss
+++ b/scss/index/_index-media.scss
@@ -62,9 +62,6 @@
      .header-button {
           display: none;
      }
-     body {
-          overflow-x: hidden;
-     }
      .menu-burger {
           display: block;
           &__button {
@@ -240,9 +237,6 @@
 @media (min-width: 480px) and (max-width: 767.9px) {
      .container {
           padding: 0px 15px 0px 15px;
-     }
-     body {
-          overflow-x: hidden;
      }
      .header-list {
           display: none;
@@ -497,9 +491,6 @@
 @media (min-width: 320px) and (max-width: 479.9px) {
      .container {
           padding: 0px 15px 0px 15px;
-     }
-     body {
-          overflow-x: hidden;
      }
      .header-list {
           display: none;
